Just code cleanup.
https://github.com/dropchop-com/recyclone/issues/5